tests/chainsaw-multi-ns/ingresses/namespace-b/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-server-b
  namespace: namespace-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: test-server-b
  template:
    metadata:
      labels:
        app.kubernetes.io/name: test-server-b
    spec:
      containers:
        - name: test-server
          image: nginx:alpine
          ports:
            - containerPort: 80
              name: http
