tests/chainsaw-multi-ns/ingresses/namespace-b/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-b
  namespace: namespace-b
spec:
  ingressClassName: ngrok-b
  rules:
    - host: (join('', ['ing-test-b', $ngrokDomainSuffix]))
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-b
                port:
                  number: 80
