tests/chainsaw-multi-ns/ingresses/namespace-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
  namespace: namespace-b
  labels:
    app.kubernetes.io/name: test-server-b
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: test-server-b
